--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,7 @@ There is only one function called `blot()`:
 
 ```{r}
 library("blotmat")
+set.seed(20160325)
 mat <- matrix(sample(c(NA, 1), 100, replace = TRUE), 10, 10)
 diag(mat) <- 0
 mat
@@ -33,3 +34,12 @@ isSymmetric(mat)
 blot(mat)
 isSymmetric(blot(mat))
 ```
+
+## Installation
+
+You can install blotmat via devtools::
+
+```{r, eval = FALSE}
+devtools::install_github("zkamvar/blotmat")
+```
+
