change name to blotr

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# blotmat: Blotting matrices since 2016
+# blotr: Blotting matrices since 2016
 
 This package does one thing: create symmetric matrices from asymmetric matrices.
 It is inspired by [This
@@ -29,7 +29,7 @@ test](https://en.wikipedia.org/wiki/Rorschach_test).
 There is only one function called `blot()`:
 
 ```{r}
-library("blotmat")
+library("blotr")
 set.seed(20160325)
 mat <- matrix(sample(c(NA, 1), 100, replace = TRUE), 10, 10)
 diag(mat) <- 0
@@ -53,9 +53,9 @@ blot(mat, ut = TRUE)
 
 ## Installation
 
-You can install blotmat via devtools::
+You can install blotr via devtools::
 
 ```{r, eval = FALSE}
-devtools::install_github("zkamvar/blotmat")
+devtools::install_github("zkamvar/blotr")
 ```
 
